--- a/vignettes/figures.Rmd
+++ b/vignettes/figures.Rmd
@@ -19,16 +19,20 @@ library(changepointsR)
 library(ggplot2)
 ```
 
+Figure 2(a): simulating under $H_0$ not including original. Here we have used 100 simulations so that the code is quicker to run; to reproduce the plot in the paper change num_iter to 1000. To reproduce Figure 2(b) set h = 20.
+
 ```{r plots}
 set.seed(100)
 h <- 10
-pvals <- matrix(NA, nrow=1000, ncol=5)
+n <- 1000
+num_iter <- 100
+pvals <- matrix(NA, nrow=num_iter, ncol=5)
 iter <- 1
-while( iter <= 1000 ){
-  y <- rnorm(1000)
+while( iter <= num_iter ){
+  y <- rnorm(n)
   results <- binary_segmentation(y, threshold=3.5)
-  if ( length(results$changepoints) >=1 ){
-    if ( results$changepoints[1] >= 10 & results$changepoints[1] <= 990 ){
+  if ( length(results$changepoints) >= 1 ){
+    if ( results$changepoints[1] >= h & results$changepoints[1] <= (n-h) ){
       x <- calculate_pvals(y, results, N=50, h=h, sigma2=1, num_pvals=1)
       pvals[iter,1] <- x$P_both[1] / x$P_phi_in_S[1]
       pvals[iter,2] <- sum(x$P_both[1:5]) / sum(x$P_phi_in_S[1:5])
@@ -44,14 +48,96 @@ pvals[is.na(pvals)] <- 0.5 ## set NaNs to 0.5
 colnames(pvals) <- paste0("N", c(1, 5, 10, 20, 50))
 
 ## Sort p-values
-pvals_sorted <- matrix(NA, nrow=1000, ncol=5)
+pvals_sorted <- matrix(NA, nrow=num_iter, ncol=5)
 for ( i in 1:5 ){
   pvals_sorted[,i] <- sort(pvals[,i])
 }
 
 ## Plot p-values against theoretical quantities from U(0,1)
-dat <- data.frame(x=rep(seq(0, 1, length.out=1000), 4), y=as.vector(pvals_sorted[,c(1,2,3,5)]), 
-                  N=rep(as.factor(c(1, 5, 10, 50)), each=1000))
+dat <- data.frame(x=rep(seq(0, 1, length.out=num_iter), 4), y=as.vector(pvals_sorted[,c(1,2,3,5)]), 
+                  N=rep(as.factor(c(1, 5, 10, 50)), each=num_iter))
 ggplot(dat) + geom_point(aes(x=x, y=y, colour=N)) + geom_line(aes(x=x, y=y, colour=N)) +
   geom_abline(intercept=0, slope=1) + labs(x="p-value", y="")
+```
+
+Figure 2(c). As above, to reproduce the plot in the paper set num_iter = 1000. To reproduce Figure 2(d) also set h = 20.
+
+```{r plots}
+set.seed(100)
+h <- 10
+n <- 1000
+num_iter <- 100
+pvals <- matrix(NA, nrow=num_iter, ncol=5)
+iter <- 1
+while( iter <= num_iter ){
+  y <- rnorm(n)
+  results <- binary_segmentation(y, threshold=3.5)
+  if ( length(results$changepoints) >= 1 ){
+    if ( results$changepoints[1] >= h & results$changepoints[1] <= (n-h) ){
+      x <- calculate_pvals(y, results, N=50, h=h, sigma2=1, num_pvals=1, include_original=TRUE)
+      pvals[iter,1] <- x$P_both[50] / x$P_phi_in_S[50]
+      pvals[iter,2] <- sum(x$P_both[c(1:4,50)]) / sum(x$P_phi_in_S[c(1:4,50)])
+      pvals[iter,3] <- sum(x$P_both[c(1:9,50)]) / sum(x$P_phi_in_S[c(1:9,50)])
+      pvals[iter,4] <- sum(x$P_both[c(1:19,50)]) / sum(x$P_phi_in_S[c(1:19,50)])
+      pvals[iter,5] <- sum(x$P_both) / sum(x$P_phi_in_S)
+      iter <- iter + 1
+    }
+  }
+}
+pvals[pvals>1] <- 1 ## some p-values are slightly above 1 because of floating point errors
+pvals[is.na(pvals)] <- 0.5 ## set NaNs to 0.5
+colnames(pvals) <- paste0("N", c(1, 5, 10, 20, 50))
+
+## Sort p-values
+pvals_sorted <- matrix(NA, nrow=num_iter, ncol=5)
+for ( i in 1:5 ){
+  pvals_sorted[,i] <- sort(pvals[,i])
+}
+
+## Plot p-values against theoretical quantities from U(0,1)
+dat <- data.frame(x=rep(seq(0, 1, length.out=num_iter), 4), y=as.vector(pvals_sorted[,c(1,2,3,5)]), 
+                  N=rep(as.factor(c(1, 5, 10, 50)), each=num_iter))
+ggplot(dat) + geom_point(aes(x=x, y=y, colour=N)) + geom_line(aes(x=x, y=y, colour=N)) +
+  geom_abline(intercept=0, slope=1) + labs(x="p-value", y="")
+```
+
+
+```{r echo=FALSE, warning=FALSE}
+n <- 1000
+h <- 10
+delta <- 1
+num_iter <- 100
+
+pvals <- matrix(NA, nrow=num_iter, ncol=6)
+iter <- 1
+while( iter <= num_iter ){
+  y <- rnorm(n) + c(rep(delta/2,n/2), rep(-delta/2,n/2))
+  results <- binary_segmentation(y)
+  if ( length(results$changepoints) >=1 ){
+    if ( results$changepoints[1] >= h & results$changepoints[1] <= (n-h) ){
+      x <- calculate_pvals(y, results, N=50, h=h, include_original=TRUE, num_pvals=1)
+      pvals[iter,1] <- x$P_both[50] / x$P_phi_in_S[50]
+      pvals[iter,2] <- sum(x$P_both[c(1,50)]) / sum(x$P_phi_in_S[c(1,50)])
+      pvals[iter,3] <- sum(x$P_both[c(1:4,50)]) / sum(x$P_phi_in_S[c(1:4,50)])
+      pvals[iter,4] <- sum(x$P_both[c(1:9,50)]) / sum(x$P_phi_in_S[c(1:9,50)])
+      pvals[iter,5] <- sum(x$P_both[c(1:19,50)]) / sum(x$P_phi_in_S[c(1:19,50)])
+      pvals[iter,6] <- sum(x$P_both) / sum(x$P_phi_in_S)
+      iter <- iter + 1
+    }
+  }
+}
+pvals[pvals>1] <- 1 ## some p-values are slightly above 1 because of floating point errors
+colnames(pvals) <- paste0("N", c(1, 2, 5, 10, 20, 50))
+
+
+### Figure 3(a): QQ plot vs. H0
+pvals_sorted <- matrix(NA, nrow=1000, ncol=6)
+for ( i in 1:6 ){
+  pvals_sorted[,i] <- sort(pvals[,i])
+}
+dat <- data.frame(x=rep(seq(0, 1, length.out=1000), 6), y=as.vector(pvals_sorted), 
+                  N=rep(as.factor(c(1, 2, 5, 10, 20, 50)), each=1000))
+ggplot(dat) + geom_point(aes(x=x, y=y, colour=N)) + geom_line(aes(x=x, y=y, colour=N)) +
+  geom_abline(intercept=0, slope=1) + labs(x="p-value", y="")
+  
 ```
